# regradex

./: .gitignore  LICENSE  README.md  exam_1_grading.ipynb  pyproject.toml
json/: make_answers.py
regradex/: __init__.py  grader.py  helpers.py  review.py  schema.py
tests/: test_grader.py  test_helpers.py  test_review.py  test_schema.py
